Add filter and search function Refactoring

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1587,7 +1587,7 @@ a.disabled {
 	font-family: FontAwesome;
 }
 .sticker-active-content:before {
-	content: "5";
+	content: "|";
 	font-weight: 600;
 }
 .sticker-next-content:before {
