--- a/src/main/resources/static/styles/css/adoptationRecipe.css
+++ b/src/main/resources/static/styles/css/adoptationRecipe.css
@@ -12,15 +12,18 @@
 	.recipe-second-part {
 		width: 100%;
 	}
+	.recipe-buttons {
+		border-bottom: 1px solid rgba(0, 0, 0, .075);
+	}
 	.recipe-description {
-		padding: 0em 1.5em 1em 1.5em;
+		padding: 1em 1.5em 1em 1.5em;
+	}
+	.recipe-description:nth-child(2) {
+		padding: 1em 1.5em 2em 1.5em;
 	}
 	.recipe-time,
 	.recipe-calories {
 		padding: 1em 1em;
-	}
-	.icons li {
-		padding: 0 1.5em 0 0;
 	}
 }
 
@@ -60,7 +63,7 @@
 	}
 }
 
-@media(max-width: 650px) {
+@media(max-width: 576px) {
 	header nav .logotype {
 		font-size: 1rem;
 		padding-top: 14px;
@@ -71,11 +74,6 @@
 	}
 	.main-page {
 		display: block;
-	}
-	.filtr-box {
-		width: 100%;
-		margin-right: 0;
-		margin-bottom: 20px;
 	}
 	.list {
 		width: 100%;
@@ -92,8 +90,9 @@
 		width: 150px;
 		cursor: pointer;
 	}
-	.icons li {
-		padding: 0 1em 0 0;
+	.tag {
+		padding: 0 10px 0 10px;
+    	font-size: 0.9em;
 	}
 }
 
