--- a/src/main/resources/static/styles/css/adoptationEdit.css
+++ b/src/main/resources/static/styles/css/adoptationEdit.css
@@ -1,111 +1,124 @@
 @media(max-width: 968px) {
 	.content-box {
-	padding: 0 20px;
+		padding: 0 20px;
 	}
 	.recipe-box {
-	display: block;
+		display: block;
 	}
 	.recipe-first-part {
-	width: 100%;
-	border-right: none;
+		width: 100%;
+		border-right: none;
 	}
 	.recipe-second-part {
-	width: 100%;
+		width: 100%;
 	}
 	.recipe-buttons {
-	border-bottom: 1px solid rgba(0, 0, 0, .075);
+		border-bottom: 1px solid rgba(0, 0, 0, .075);
 	}
 	.recipe-description {
-	padding: 1em 1.5em 1em 1.5em;
+		padding: 1em 1.5em 1em 1.5em;
 	}
 	.recipe-description:nth-child(2) {
-	padding: 1em 1.5em 0em 1.5em;
+		padding: 1em 1.5em 0em 1.5em;
 	}
 	.recipe-time,
 	.recipe-calories {
-	padding: 1em 1em;
+		padding: 1em 1em;
 	}
-	}
-	@media(max-width: 768px) {
+}
+
+@media(max-width: 768px) {
 	.menu-left a {
-	font-size: 0.9em;
+		font-size: 0.9em;
 	}
 	.search-form {
-	position: absolute;
-	top: 29px;
-	left: 55%;
-	width: 30px;
-	height: 30px;
-	padding: 5px;
+		position: absolute;
+		top: 29px;
+		left: 55%;
+		width: 30px;
+		height: 30px;
+		padding: 5px;
 	}
 	.search-form {
-	width: 170px;
-	cursor: pointer;
+		width: 170px;
+		cursor: pointer;
 	}
 	.search-input {
-	position: absolute;
-	top: 1px;
-	left: 0;
-	width: 80%;
-	height: 24px;
-	font-size: 1em;
-	padding: 0 10px;
+		position: absolute;
+		top: 1px;
+		left: 0;
+		width: 80%;
+		height: 24px;
+		font-size: 1em;
+		padding: 0 10px;
 	}
 	.fa {
-	padding: 5.5px;
-	width: 22.5px;
-	height: 22.5px;
-	position: absolute;
-	top: 1.5px;
-	right: 2px;
-	font-size: 0.75em;
+		padding: 5.5px;
+		width: 22.5px;
+		height: 22.5px;
+		position: absolute;
+		top: 1.5px;
+		right: 2px;
+		font-size: 0.75em;
 	}
-	}
-	@media(max-width: 576px) {
+}
+
+@media(max-width: 576px) {
 	header nav .logotype {
-	font-size: 1rem;
-	padding-top: 14px;
-	padding-bottom: 0px;
+		font-size: 1rem;
+		padding-top: 14px;
+		padding-bottom: 0px;
 	}
 	.search-form {
-	left: 60%;
+		left: 60%;
 	}
 	.main-page {
-	display: block;
+		display: block;
 	}
 	.list {
-	width: 100%;
-	margin-left: 0;
+		width: 100%;
+		margin-left: 0;
 	}
-	}
-	@media(max-width:480px) {
+}
+
+@media(max-width:480px) {
 	header nav .logotype {
-	font-size: 0.95rem;
-	padding-top: 14px;
+		font-size: 0.95rem;
+		padding-top: 14px;
 	}
 	.search-form {
-	width: 150px;
-	cursor: pointer;
+		width: 150px;
+		cursor: pointer;
 	}
 	.tag {
-	padding: 0 10px 0 10px;
-	font-size: 0.9em;
+		padding: 0 10px 0 10px;
+		font-size: 0.9em;
 	}
 	.recipe-tags {
-	display: block;
+		display: block;
 	}
 	.tag-content {
-	width: 100%;
-	max-width: 200px;
+		width: 100%;
+		max-width: 200px;
 	}
+	.recipe-tags>div:nth-child(1) {
+		margin-bottom: 10px;
 	}
-	@media(max-width:340px) {
+	.upload-file-status {
+		font-size: 0.8em;
+	}
+	.upload-file-button {
+		font-size: 0.9em;
+	}
+}
+
+@media(max-width:340px) {
 	header nav .logotype {
-	font-size: 0.9rem;
-	padding-top: 15px;
+		font-size: 0.9rem;
+		padding-top: 15px;
 	}
 	.search-form {
-	width: 150px;
-	cursor: pointer;
+		width: 150px;
+		cursor: pointer;
 	}
-	}
+}
