--- a/src/main/resources/static/styles/css/contentEdit.css
+++ b/src/main/resources/static/styles/css/contentEdit.css
@@ -2,57 +2,67 @@
 	margin: 100px auto;
 	width: 100%;
 	min-height: calc(100vh - 80px);
-	}
-	.main-page {
+}
+
+.main-page {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	margin: 0 auto;
 	max-width: 1200px;
-	}
-	.list {
+}
+
+.list {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	margin-left: 10px;
 	order: 2;
 	width: 70%;
-	}
-	.recipe-box {
+}
+
+.recipe-box {
 	display: flex;
 	margin-bottom: 30px;
 	background: #fff;
 	border-radius: 10px;
 	box-shadow: 4px 5px 15px 0px rgba(34, 60, 80, 0.2);
-	}
-	.recipe-first-part {
+}
+
+.recipe-first-part {
 	order: 1;
 	width: 50%;
 	padding: 2em 0em 0 0em;
 	border-right: 1px solid rgba(0, 0, 0, .075);
-	}
-	.dish-name {
+}
+
+.dish-name {
 	margin-bottom: 20px;
 	text-align: center;
-	}
-	.dish-photo {
+}
+
+.dish-photo {
 	margin-bottom: 5px;
 	padding: 0 1em;
-	}
-	.dish-photo img {
+}
+
+.dish-photo img {
 	width: 100%;
 	border-radius: 10px;
-	}
-	.recipe-tags {
+}
+
+.recipe-tags {
 	display: flex;
 	flex-wrap: wrap;
 	padding: 1em 1em;
-	}
-	.tag-content {
+}
+
+.tag-content {
 	width: 50%;
 	padding: 0px 5px;
-	}
-	.tag {
+}
+
+.tag {
 	height: 32px;
 	width: auto;
 	padding: 0 20px 0 20px;
@@ -63,44 +73,53 @@
 	line-height: 32px;
 	background: #c4e7fd;
 	border-radius: 10px;
-	}
-	.recipe-second-part {
+}
+
+.recipe-second-part {
 	order: 2;
 	width: 50%;
-	}
-	.recipe-description {
+}
+
+.recipe-description {
 	width: 100%;
 	padding: 2em 1.5em;
 	text-align: center;
-	}
-	.recipe-description:not(:nth-child(2)) {
+}
+
+.recipe-description:not(:nth-child(2)) {
 	border-bottom: 1px solid rgba(0, 0, 0, .075);
-	}
-	.recipe-description:nth-child(2) {
+}
+
+.recipe-description:nth-child(2) {
 	padding-bottom: 0;
-	}
-	.description-name {
+}
+
+.description-name {
 	margin-bottom: 20px;
-	}
-	.description-text,
-	.ingredients-text {
+}
+
+.description-text,
+.ingredients-text {
 	text-align: start;
 	line-height: 1.3em;
-	}
-	.recipe-characterisctics {
+}
+
+.recipe-characterisctics {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	text-align: center;
 	border-top: 1px solid rgba(0, 0, 0, .075);
 	border-bottom: 1px solid rgba(0, 0, 0, .075);
-	}
-	.recipe-time,
-	.recipe-calories {
+}
+
+.recipe-time,
+.recipe-calories {
 	display: block;
 	position: relative;
-	}
-	.recipe-time:before {
+}
+
+.recipe-time:before {
 	display: block;
 	color: gold;
 	position: relative;
@@ -108,8 +127,9 @@
 	font-size: 1.5em;
 	content: "\f017";
 	font-family: FontAwesome;
-	}
-	.recipe-calories:before {
+}
+
+.recipe-calories:before {
 	display: block;
 	color: gold;
 	position: relative;
@@ -117,43 +137,51 @@
 	font-size: 1.5em;
 	content: "\f0e7";
 	font-family: FontAwesome;
-	}
-	.recipe-time {
+}
+
+.recipe-time {
 	width: 50%;
 	border-right: 1px solid rgba(0, 0, 0, .075);
-	}
-	.recipe-time,
-	.recipe-calories {
+}
+
+.recipe-time,
+.recipe-calories {
 	width: 50%;
 	padding: 1em 1em;
-	}
-	.calories-name {
+}
+
+.calories-name {
 	margin-bottom: 20px;
 	text-align: center;
-	}
-	.name-span {
+}
+
+.name-span {
 	padding-top: 10px;
 	width: 30%;
 	margin: 0 auto;
 	border-bottom: 1px solid rgb(183, 183, 183);
-	}
-	.recipe-buttons {
+}
+
+.recipe-buttons {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	text-align: center;
-	}
-	.sticker-container {
+}
+
+.sticker-container {
 	padding: 1em 1em;
 	width: 50%;
 	text-align: center;
-	}
-	.edit-image {
+}
+
+.edit-image {
 	padding: 1em 1em;
 	border-bottom: 1px solid rgba(0, 0, 0, .075);
-	}
-	textarea {
-	overflow: hidden; 
+}
+
+textarea {
+	overflow: hidden;
 	resize: none;
 	padding: 5px;
 	border: 1px solid #d2d8d8;
@@ -161,35 +189,40 @@
 	font-family: 'Montserrat', sans-serif;
 	overflow: hidden;
 	font-size: 12px
-	}
-	.dish-name textarea {
+}
+
+.dish-name textarea {
 	height: 70px;
-	}
-	.tag-content textarea {
+}
+
+.tag-content textarea {
 	height: 45px;
-	}
-	.recipe-tags>div:nth-child(1) {
-	margin-bottom: 10px;
-	}
-	.tag-content textarea {
+}
+
+.tag-content textarea {
 	width: 100%;
-	}
-	.recipe-time textarea, .recipe-calories textarea {
+}
+
+.recipe-time textarea,
+.recipe-calories textarea {
 	height: 32px;
 	text-align: center;
 	line-height: 10px;
 	width: 100%;
-	}
-	.recipe-description textarea {
+}
+
+.recipe-description textarea {
 	width: 100%;
 	height: 300px;
 	overflow: visible;
-	}
-	.save-edit {
+}
+
+.save-edit {
 	text-align: center;
 	padding: 1em 1em;
-	}
-	.save-edit button {
+}
+
+.save-edit button {
 	padding: 0 20px 0 20px;
 	background: #81cbfb;
 	color: #fff;
@@ -199,17 +232,19 @@
 	line-height: 32px;
 	border: none;
 	border-radius: 10px;
-	}
-	.save-edit button:hover {
-	background:#37acf9;
+}
+
+.save-edit button:hover {
+	background: #37acf9;
 	cursor: pointer;
-	}
-	@media(max-width:480px) {
+}
+
+@media(max-width:480px) {
 	.recipe-tags {
-	display: block;
+		display: block;
 	}
 	.tag-content {
-	width: 100%;
-	max-width: 200px;
+		width: 100%;
+		max-width: 200px;
 	}
-	}
+}
