--- a/src/main/resources/static/styles/css/contentEdit.css
+++ b/src/main/resources/static/styles/css/contentEdit.css
@@ -51,30 +51,6 @@
 	border-radius: 10px;
 }
 
-.recipe-tags {
-	display: flex;
-	flex-wrap: wrap;
-	padding: 1em 1em;
-}
-
-.tag-content {
-	width: 50%;
-	padding: 0px 5px;
-}
-
-.tag {
-	height: 32px;
-	width: auto;
-	padding: 0 20px 0 20px;
-	color: black;
-	transition: 0.3s linear;
-	font-size: 1.1em;
-	font-weight: 500;
-	line-height: 32px;
-	background: #c4e7fd;
-	border-radius: 10px;
-}
-
 .recipe-second-part {
 	order: 2;
 	width: 50%;
@@ -197,15 +173,26 @@ textarea {
 
 .tag-content textarea {
 	height: 45px;
-}
-
-.tag-content textarea {
 	width: 100%;
 }
 
+select {
+	padding: 5px;
+	border: 1px solid #d2d8d8;
+	border-radius: 5px;
+	background: #fff;
+	color:#7c7c7c;
+	font-size: 12px;
+	font-family: 'Montserrat', sans-serif;
+}
+
+ select:hover, select:focus, textarea:hover, textarea:focus { border: 1px solid #81cbfb;} 
+ 
+
+
 .recipe-time textarea,
 .recipe-calories textarea {
-	height: 32px;
+	height: 40px;
 	text-align: center;
 	line-height: 10px;
 	width: 100%;
@@ -215,28 +202,6 @@ textarea {
 	width: 100%;
 	height: 300px;
 	overflow: visible;
-}
-
-.save-edit {
-	text-align: center;
-	padding: 1em 1em;
-}
-
-.save-edit button {
-	padding: 0 20px 0 20px;
-	background: #81cbfb;
-	color: #fff;
-	transition: 0.3s linear;
-	font-size: 1.4em;
-	font-weight: 500;
-	line-height: 32px;
-	border: none;
-	border-radius: 10px;
-}
-
-.save-edit button:hover {
-	background: #37acf9;
-	cursor: pointer;
 }
 
 @media(max-width:480px) {
